Bug #20893 Valgrind 'invalid read' warning in test case partition_range
Submitted: 6 Jul 2006 22:15 Modified: 19 Jul 2006 4:32
Reporter: Kristian Nielsen Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Partitions Severity:S3 (Non-critical)
Version:5.1.12 OS:Linux (Linux)
Assigned to: Mikael Ronström CPU Architecture:Any

[6 Jul 2006 22:15] Kristian Nielsen
Description:
There is a Valgrind error reported in the test case 'partition_range':

VALGRIND: 'Invalid read of size 8'
    COUNT: 1
    FUNCTION: ha_partition::change_partitions(st_ha_create_information*,    FILES:    master.err
    TESTS:    partition_range
    STACK: at 0x6CB350: ha_partition::change_partitions(st_ha_create_information*, char const*, unsigned long*, unsigned long*, void const*, unsigned) (ha_partition.cc:1362)
             by 0x547A00: mysql_change_partitions(st_lock_param_type*) (sql_partition.cc:4708)
             by 0x5444B0: fast_alter_partition_table(THD*, st_table*, st_alter_info*, st_ha_create_information*, st_table_list*, List<create_field>*, List<Key>*, char*, char const*, unsigned) (sql_partition.cc:6033)
             by 0x717171: mysql_alter_table(THD*, char*, char*, st_ha_create_information*, st_table_list*, List<create_field>&, List<Key>&, unsigned, st_order*, enum_duplicates, bool, st_alter_info*, bool) (sql_table.cc:5699)
             by 0x602202: mysql_execute_command(THD*) (sql_parse.cc:3114)
             by 0x6090DF: mysql_parse(THD*, char*, unsigned) (sql_parse.cc:6111)
             by 0x5FFEE0: dispatch_command(enum_server_command, THD*, char*, unsigned) (sql_parse.cc:1796)
             by 0x5FF9C6: do_command(THD*) (sql_parse.cc:1582)
             by 0x5FEBF5: handle_one_connection (sql_parse.cc:1222)
             by 0x4C37C63: start_thread (in /lib64/tls/libpthread-0.60.so)
             by 0x52F3242: clone (in /lib64/tls/libc-2.3.2.so)
           Address 0x74F6F58 is not stack'd, malloc'd or (recently) free'd

How to repeat:
mysql-test-run --valgrind-all partition_range

The error is also visible in Pushbuild.
[18 Jul 2006 8:57] Mikael Ronström
Will appear in 5.1.12
[19 Jul 2006 4:32] Jon Stephens
Documented bugfix in 5.1.12 changelog.