BUG#20893: Valgrind error

mysql-test/r/partition_mgm.result:
  Added new test case
mysql-test/t/partition_mgm.test:
  Added new test case
sql/ha_partition.cc:
  Fixed memory overwrite, added new variable for memory check
  Problem was when reorganising partitions, the file handles
  got in the wrong place.
sql/ha_partition.h:
  Added new variable for debugging mostly